style.css
@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body, .page-wrapper {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100vw;
    height: 100%;
    font-family: 'Josefin Sans';
    font-size: 10px; /* For making rem calculations easier */
    scroll-behavior: smooth;
    overflow-x: hidden;
}

a {
    color: white;
    text-decoration: none;
}

header {
    background: rgba(0, 0, 0, 0.5);
    font-size: 2rem;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 5;
}

#logo {
    filter: invert();
    height: 2.5em;
    margin: 0.5em 1em;
    vertical-align: top;
}

nav, .menu {
    float: right;
    height: 100%;
    margin-right: 1em;
}

.button {
    background-color: transparent;
    border: 0.1em solid white;
    border-radius: 0.5em;
    color: white;
    display: inline-block;
    margin: 0.5em;
    padding: 1rem;
}
.button:hover {
    cursor: pointer;
    background: whitesmoke;
    color: black;
}


#welcome {
    background: url("./images/lines/light-bl.svg"), url("./images/lines/light-br.svg"), linear-gradient( rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("./images/wed.jpg");
    background-position: bottom left, bottom right, top left, top center;
    background-repeat: no-repeat, no-repeat, repeat, no-repeat;
    background-size: 45em, 45em, auto, cover;
    padding: 25vh 5vh;
    height: 100vh;
    width: 100vw;
}
.title-wrapper{
    display: table;
    background-color: rgba(0, 0, 0, 0.5);
    border: .5rem solid white;
    border-radius: 10rem;
    color: white;
    height: 50vh;
    width: auto;
    margin: 0 auto;
    padding: 2rem;
    text-align: center;
}
.cell {
    display: table-cell;
    vertical-align: middle;
}
.title-wrapper * {
    padding: 1rem;
    margin: 1rem;
}
.title {
    font-family: 'Alex Brush', serif;
    font-size: 7rem;
}
.subtitle {
    font-size: 4rem;
    font-weight: 300;
}
#welcome strong {
    text-transform: uppercase;
}
#banner-button {
    font-family: inherit;
    font-size: 3rem;
    margin-top: 3rem;
}

#details {
    width: 100vw;
    background-image: url("./images/lines/dark-tl.svg"), url("./images/lines/dark-tr.svg"), url("./images/lines/dark-bl.svg"), url("./images/lines/dark-br.svg");
    background-position: top left, top right, bottom left, bottom right;
    background-repeat: no-repeat;
    background-size: 45em;
    padding-bottom: 10rem;
}
#details-wrapper {
    text-align: center;
    margin: 0 auto;
}

#info {
    width: 80%;
    min-height: 100vh;
    margin: 0 auto;
    padding: 8rem 0 1rem 0;
}
.flex-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
}
.details-cell {
    font-size: 2.83vh;
    margin: 0 auto;
    height: calc(50vh - 9rem);
    width: calc(50vh - 9rem);
}
.details-cell h2 {
    margin-bottom: 1rem;
    font-family: 'Alex Brush', serif;
    font-size: 8vh;
}
.details-cell h4 {
    margin-bottom: 2rem;
    text-transform: uppercase;
}
#first-info {
    padding: 10rem 0;
}
#second-info {
    padding: 10vmin 0;
}
.flex-container#second {
    margin: 0 0 10rem 0;
}

.animation {
    background-repeat: no-repeat;
    border-radius: 50%;
    box-shadow: 0 0 15px 3px rgba(0, 0, 0, 0.5);
    /* box-shadow: 0 0 100px 10px rgba(0, 0, 0, 0.5); */
}
#first-animation {
    background-image: url("./images/smiles.gif");
    background-position: center;
    background-size: cover;
}
#second-animation {
    background-image: url("./images/brick-walkway.gif");
    background-position: 56% 20%;
    background-size: 150%;
}
#save-the-date {
    max-width: 800px;
    width: 80%;
    margin: 3rem;
}


#registry-wrapper {
    background: gray;
    background-image: url("./images/lines/light-tl.svg"), url("./images/lines/light-tr.svg"), linear-gradient(45deg, rgb(75,37,80), transparent);;
    background-position: top left, top right, bottom center;
    background-repeat: no-repeat, no-repeat, no-repeat;
    background-size: 45em, 45em, cover;
    width: 100vw;
}
#registry {
    padding-bottom: 8rem;
}
#registry h2 {
    display: block;
    color: white;
    font-size: 30px;
    font-weight: 400;
    padding: 5rem 5rem 0 5rem;
    margin-bottom: 2em;
    text-transform: uppercase;
    text-align: center;
}
#registry-list {
    display: flex;
    flex: 1;
    flex-wrap: wrap;
    justify-content: space-evenly;
    list-style: none;
    margin: 0;
    padding: 0;
}
#registry-list li {
    background-color: white;
    background-repeat: no-repeat;
    border-radius: 50%;
    box-shadow: 0 0 15px 3px rgba(0, 0, 0, 0.5);
    padding: 1em;
    margin: 1em;
    width: 30vmin;
    height: 30vmin;
    transition: 250ms ease-in-out;
    transition-property: transform;
}
#registry-list a {
    font-size: 0;
    height: 100%;
}
#first-registry {
    background-image: url("./images/registry-pictures/williams-sonoma.png");
    background-size: 120%;
    background-position: center;
}
#second-registry {
    background-image: url("./images/registry-pictures/bed-bath-and-beyond.png");
    background-size: 150%;
    background-position: center;
}
#third-registry {
    background-image: url("./images/registry-pictures/anthropology-logo.png");
    background-size: 90%;
    background-position: 50% 100%;
}
#registry-list li:hover {
    transform: scale(1.2);
    cursor: pointer;
}


@media only screen and (max-width: 1000px) {
    #welcome {
        background-size: 30em, 30em, auto, cover;
    }
    #details {
        background-size: 30em;
    }
    #registry-wrapper {
        background-size: 30em, 30em, cover;
    }
}

@media only screen and (max-width: 650px) {
    #welcome {
        background-size: 23em, 23em, auto, cover;
    }
    #details {
        background-size: 23em;
    }
    #registry-wrapper {
        background-size: 23em, 23em, cover;
    }
}

@media only screen and (max-width: 480px) {
    #welcome {
        background-size: 18em, 18em, auto, cover;
        padding: 15vh 5vh;
    }
    #details {
        background-size: 18em;
    }
    #registry-wrapper {
        background-size: 18em, 18em, cover;
    }
}
@media only screen and (max-width: 400px) {
    #welcome {
        background-size: 15em, 15em, auto, cover;
    }
    #details {
        background-size: 15em;
    }
    #registry-wrapper {
        background-size: 15em, 15em, cover;
    }
}
@media only screen and (max-width: 361px) {
    #welcome {
        padding: 18vh 5vh;
    }
}


@media only screen and (max-width: 715px) {
    .title {
        font-size: 6rem;
    }
    .subtitle {
        font-size: 3rem;
    }
    #banner-button {
        font-size: 2rem;
    }
}

@media only screen and (max-width: 600px) {
    #logo {
        display: none;
    }
    header {
        text-align: center;
    }
    nav {    
        float: none;
        margin: 0;
    }
    .menu {
        float: none;
        margin: 0 auto;
    }
}

